Fix tests because of changed transportMode filter and add test for vehicles query